tests/mut_placeholder_outside_sub.test
let x: _.T = 42;
####
SyntaxError: Substitution placeholders are only allowed in coercion expression type substitutions.
let x: _.T = 42;
       ^~~
